began work on how a game ends

--- a/index.html
+++ b/index.html
@@ -10,7 +10,5 @@
 </head>
 <body>
     <div id="boardTTT">
-        
-    </div>
-</body>
+        <button onclick="ticTacToe.init()">New Game!</button>
 </html>
