--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,17 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <div id="boardTTT">
-        <button onclick="ticTacToe.init()">New Game!</button>
+    <div>
+        <div id="boardTTT">
+        </div>
+        <section>
+            <button onclick="ticTacToe.init()">New Game!</button>
+            <div id="players">
+                <div id="player1">Player 1: <span id="player1score">0</span></div>
+                <div id="player2">Player 2: <span id="player2score">0</span></div>
+            </div>
+        </section>
+
 </html>
