--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
     </div>
         <section>
             <button onclick="ticTacToe.init()">New Game!</button>
+            <section id="p1Name">
+                <label for="player1NameInp">Enter Player 1</label>
+                <input type="text" name="player1NameInp" id="player1NameInp">
+            </section>
+            <section id="p2Name">
+                <label for="player2NameInp">Enter Player 2</label>
+                <input type="text" name="player2NameInp" id="player2NameInp">
+            </section>
             <div id="players">
-                <div id="player1">Player 1: <span id="player1score">0</span></div>
-                <div id="player2">Player 2: <span id="player2score">0</span></div>
+                <div id="player1"><span id="player1Name">Player 1</span>: <span id="player1score">0</span></div>
+                <div id="player2"><span id="player2Name">Player 2</span>: <span id="player2score">0</span></div>
             </div>
         </section>
 
