Draw Message Fix

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <button onclick="ticTacToe.init()">New Game!</button>
             <section id="p1Name">
                 <label for="player1NameInp">Enter Player 1</label>
-                <input type="text" name="player1NameInp" id="player1NameInp">
+                <input type="text" name="player1NameInp" id="player1NameInp" value="Player 1">
             </section>
             <section id="p2Name">
                 <label for="player2NameInp">Enter Player 2</label>
-                <input type="text" name="player2NameInp" id="player2NameInp">
+                <input type="text" name="player2NameInp" id="player2NameInp" value="Player 2">
             </section>
             <div id="players">
                 <div id="player1"><span id="player1Name">Player 1</span>: <span id="player1score">0</span></div>
